--- a/index.html
+++ b/index.html
@@ -85,11 +85,16 @@
     <footer>
       This page was coded by
       <a
-        href="https://glittery-salmiakki-e4c520.netlify.app/"
+        href="https://sandra-tsai-yun.netlify.app/"
         alt="Link to Portfolio"
         target="_blank"
         >Sandra Tsai-Yun</a
-      >
+      > and it is 
+      <a
+        href="https://github.com/daratyoon/SheCodes-Basic-Add-On-Project"
+        alt="Link to GitHub Repo"
+        target="_blank"
+        >open-sourced </a>
       <div class="photo-credit">
         Photographs taken by Sandra with 35mm film ✌🏻
       </div>
